# slackfm-rs

./: Cargo.toml  Dockerfile  Dockerfile.openshift
migrations/2018-02-22-065836_create_oauth/: down.sql  up.sql
src/: command.rs  health.rs  lastfm.rs  main.rs  oauth.rs  slack.rs  spotify.rs
src/db/: mod.rs  models.rs  postgres.rs  schema.rs  sqlite.rs
