[package]
name = "slackfm"
version = "0.1.0"
authors = ["James Forcier <csssuf@csssuf.net>"]

[dependencies]
diesel = "~1.2"
failure = "0.1"
percent-encoding = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
rustfm = { git = "https://github.com/csssuf/rustfm", branch = "misc-fixes" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.reqwest]
version = "0.10"
features = ["blocking"]

[dependencies.rspotify]
version = "0.9"
features = ["blocking"]

[dependencies.slack_api]
version = "0.19"
default-features = false

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
